fix overlapping buttons on mobile, remove inline image figcaption, update robots.txt

--- a/app/assets/css/clean-blog.scss
+++ b/app/assets/css/clean-blog.scss
@@ -449,3 +449,11 @@ footer .copyright {
 .dropdown-open {
   background: #e7e7e7;
 }
+
+.module-blog {
+  footer {
+    a {
+      max-width: 40%;
+    }
+  }
+}
